# escher-vault

./: .clippy.toml  .dockerignore  .env  .envrc  .gitignore  ASSET_INFO_VULNERABILITIES.md  BABYLON-DEPLOYMENT.md  CONTRACT_EXECUTE_VULNERABILITIES.md  Cargo.toml  DEPLOYMENT.md  DOCKER-SETUP.md  Dockerfile  ERROR_HANDLING_SECURITY_FIXES.md  EXECUTE_RS_SECURITY_IMPROVEMENTS.md  LICENSE  MSG_RS_SECURITY_IMPROVEMENTS.md  NATIVE-TOKEN-MODIFICATIONS.md  NIX-ONLY-SETUP.md  NIX-QUICK-REFERENCE.md  NIX-SETUP.md  QUERY_RS_SECURITY_IMPROVEMENTS.md  QUERY_VULNERABILITIES.md  README.md  RESPONSES_RS_SECURITY_IMPROVEMENTS.md  SECURITY_FIXES_SUMMARY.md  STAKING_RS_SECURITY_IMPROVEMENTS.md  VERIFY.md  babylon-testnet-config.toml  build  docker-compose.yml  flake.nix  instantiate_escher.json  instantiate_escher_with_fee.json  instantiate_msg.json  instantiate_msg_corrected.json  rustfmt.toml
.cargo/: config.toml
.cargo-home/: .global-cache  config.toml
.cargo-home/git/db/static-assertions-aa9eb81697e4494f/: FETCH_HEAD
.cargo-home/registry/cache/index.crates.io-1949cf8c6b5b557f/: alloy-1.0.30.crate  alloy-core-1.3.1.crate  alloy-json-abi-1.3.1.crate  alloy-primitives-1.3.1.crate  alloy-sol-macro-1.3.1.crate  alloy-sol-macro-expander-1.3.1.crate  alloy-sol-macro-input-1.3.1.crate  alloy-sol-type-parser-1.3.1.crate  alloy-sol-types-1.3.1.crate  bcs-0.1.6.crate  bip32-0.5.3.crate  blake2b_simd-1.0.3.crate  bnum-0.11.0.crate  cosmwasm-core-2.2.2.crate  cosmwasm-crypto-2.2.2.crate  cosmwasm-derive-2.2.2.crate  cosmwasm-schema-2.2.2.crate  cosmwasm-schema-derive-2.2.2.crate  cosmwasm-std-2.2.2.crate  cw-address-like-2.0.0.crate  cw-asset-4.0.0.crate  cw-multi-test-2.5.1.crate  cw-storage-macro-2.1.0.crate  cw-storage-plus-2.0.0.crate  cw-utils-2.0.0.crate  cw2-2.0.0.crate  cw20-2.0.0.crate  cw20-base-2.0.0.crate  docify-0.2.9.crate  docify_macros-0.2.9.crate  ed25519-zebra-4.1.0.crate  enumorph-0.1.2.crate  frame-support-procedural-30.0.6.crate  frame-support-procedural-tools-13.0.1.crate  macro-string-0.1.4.crate  proc-macro-warning-1.84.1.crate  ruint-1.16.0.crate  serde-1.0.222.crate  serde-json-wasm-1.0.1.crate  serde_bytes-0.11.18.crate  (+5 more)
.github/: CODEOWNERS
.github/workflows/: ci.yml  cw4626-base-ci.yml
config/: babylon-pool-deployment.json  babylon-testnet.json
contracts/cw-4626/: Cargo.toml  NOTICE
contracts/cw-4626/src/: contract.rs
contracts/cw4626-base/: Cargo.toml  README.md
contracts/cw4626-base/schema/: cw4626-base.json
contracts/cw4626-base/schema/raw/: execute.json  instantiate.json  query.json  response_to_asset.json  response_to_convert_to_assets.json  response_to_share.json  response_to_total_assets.json  response_to_total_shares.json
contracts/cw4626-base/src/: contract.rs  error.rs  execute.rs  helpers.rs  integration_tests.rs  query.rs  state.rs
contracts/cw4626-base/tests/: integration.rs
contracts/cw4626-escher/: Cargo.toml  README.md  build.rs
contracts/cw4626-escher/schema/: cw4626-escher.json
contracts/cw4626-escher/schema/raw/: execute.json  response_to_convert_to_shares.json  response_to_max_deposit.json  response_to_max_mint.json  response_to_max_redeem.json  response_to_max_withdraw.json  response_to_preview_mint.json
contracts/cw4626-escher/src/: access_control.rs  asset.rs  asset_info.rs  contract.rs  error.rs  execute.rs  helpers.rs  lib.rs  msg.rs  performance_fees.rs  query.rs  receive.rs  redemption.rs  responses.rs  staking.rs  state.rs  tower.rs  zkgm.rs
contracts/cw4626-escher/src/lst/: mod.rs  non_zkgm.rs  zkgm.rs
contracts/cw4626-escher/tests/: integration.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  chain.ts  index.css  wallet.ts
frontend/src/components/: ContractQuery.tsx  ExecuteActions.tsx  ManagerActions.tsx  OracleActions.tsx  RecentTxs.tsx  Redemptions.tsx  UserActions.tsx
nix-2.31.0-aarch64-darwin/: .reginfo  install  install-multi-user
nix-2.31.0-aarch64-darwin/store/17pkbrabxby9g5ngxz485gb9xkgzzz2l-lowdown-2.0.2-lib/lib/: liblowdown.2.dylib  liblowdown.dylib
nix-2.31.0-aarch64-darwin/store/1brrikfxpy3264387zzga42xr7xcvld6-krb5-1.21.3-lib/lib/: libcom_err.3.0.dylib  libgssapi_krb5.2.2.dylib  libgssrpc.4.2.dylib  libk5crypto.3.1.dylib  libkadm5clnt_mit.12.0.dylib  libkadm5srv_mit.12.0.dylib  libkdb5.10.0.dylib  libkrad.0.0.dylib  libkrb5.3.3.dylib  libkrb5support.1.1.dylib  libverto.0.0.dylib
nix-2.31.0-aarch64-darwin/store/1x6szn5i41n06j16cw7fc111ciga88jh-brotli-1.1.0-lib/lib/: libbrotlicommon.1.1.0.dylib  libbrotlidec.1.1.0.dylib  libbrotlienc.1.1.0.dylib
nix-2.31.0-aarch64-darwin/store/275s866s9p69qaz3hjwf7jlsppk4w3p9-libiconv-1.17/lib/: libcharset.1.dylib  libcharset.la  libiconv.2.dylib  libiconv.la
nix-2.31.0-aarch64-darwin/store/275s866s9p69qaz3hjwf7jlsppk4w3p9-libiconv-1.17/nix-support/: setup-hook
nix-2.31.0-aarch64-darwin/store/28gwlrsnv88msw7ppg209mybq169d0b1-nix-main-2.31.0/lib/: libnixmain.dylib
nix-2.31.0-aarch64-darwin/store/2a2qn20vndmnq0hql478sj6j0yfzmj3c-s2n-tls-1.5.17-dev/nix-support/: propagated-build-inputs
nix-2.31.0-aarch64-darwin/store/2c1ri39ny2h6qnfbl6n11mgbqdqlhsla-xz-5.8.1/lib/: liblzma.5.dylib  liblzma.la
nix-2.31.0-aarch64-darwin/store/2v6ddr80rg2vb6rv4z3szcx31b7qrby9-libarchive-3.8.0-lib/lib/: libarchive.13.dylib  libarchive.la
schema/: cw4626-base.json
schema/raw/: instantiate.json  query.json  response_to_preview_deposit.json  response_to_preview_redeem.json  response_to_preview_withdraw.json
scripts/: build-optimize.sh  clippy.sh  deploy-babylon-env.sh  deploy-babylon-nix.sh  deploy-babylon-pool.sh  deploy-docker.sh  deploy-native-ubbn.sh  deploy.sh  dev-docker.sh  nix-bash.sh  setup-env.sh  test-native-tokens.sh  test-vault.sh
security/: README.md
security/fixes/: ASSET_INFO_SECURITY_FIXES.md  EXECUTE_SECURITY_FIXES.md  QUERY_SECURITY_FIXES.md
security/improvements/: HELPERS_RS_SECURITY_IMPROVEMENTS.md  TOWER_RS_SECURITY_IMPROVEMENTS.md
security/vulnerabilities/: ACCESS_CONTROL_VULNERABILITIES.md  ERROR_HANDLING_VULNERABILITIES.md
(+14526 files in other folders)
