[workspace]
members = ["contracts/*"]

# Resolver has to be set explicitely in workspaces, see https://github.com/rust-lang/cargo/issues/9956
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
cosmwasm-schema = "2.2.0"
cosmwasm-std = { version = "2.2.0", features = [
  "cosmwasm_1_4",
  # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
  # "cosmwasm_2_0",
  # Or this if you only deploy to chains that have CosmWasm 2.1 or higher
  # "cosmwasm_2_1",
] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw20 = "2.0.0"
cw20-base = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
cw-multi-test = "2.0.0"
cw-ownable = "2.1.0"
cw-utils = "2.0.0"
vergen-git2 = "1.0.7"
anyhow = "1.0.99"
astroport = { git = "https://github.com/quasar-finance/babydex.git", version = "5.7.0" }
astroport-pair = { git = "https://github.com/quasar-finance/babydex.git", version = "2.1.1" }
astroport-pair-concentrated = { git = "https://github.com/quasar-finance/babydex.git", version = "4.1.1" }

cw4626-escher = { path = "contracts/cw4626-escher", version = "0.1.0-rc.0" }
unionlabs-primitives = { git = "https://github.com/unionlabs/union", default-features = false }
ucs03-zkgm = { git = "https://github.com/unionlabs/union", default-features = false }
ibc-union-spec = { git = "https://github.com/unionlabs/union", default-features = false }
unionlabs = { git = "https://github.com/unionlabs/union", default-features = false }

alloy = { version = "1.0.9", default-features = false }
alloy-primitives = { version = "1.1.2", default-features = false }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.lints.clippy]
pedantic = "warn"
