[package]
name = "cw4626-escher"
authors = ["Nuno David <ndavidq0@gmail.com>"]
edition = "2021"
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cw4626 = { workspace = true }
cw4626-base = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20-base = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
astroport-pair-concentrated = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
