[package]
name = "cw4626-escher"
authors = ["Nuno David <ndavidq0@gmail.com>"]
edition = "2024"
version.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cw-utils = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
astroport = { workspace = true }
unionlabs-primitives = { workspace = true }
ucs03-zkgm = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
ibc-union-spec = { workspace = true }
sha3 = { workspace = true }
ed25519-zebra = { version = "4.1.0", features = ["alloc"] }
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
vergen-git2 = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }

[lints]
workspace = true
